# web_14

./: README.md  main.py  pyproject.toml  requirements.txt  send-email.py  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 0cb882648211_init.py  4e89034b5a7b_add_roles_of_user.py  5e77f24e49c9_add_confirmaed_email.py
postgres-data/base/13481/: 1247  1249  1259  16410  16413  16423  16425  16431  16432  16434  16436  16438  16444  16445  16447  16448  16449  16450  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  (+7 more)
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16397  16405  16406  16408  2224  2579  2604  2606  2608  2610  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2703  2704  3455  3501  3502  3503  3534  5002
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  global.stat
postgres-data/pg_xact/: 0000
src/: schemas.py
src/conf/: config.py
src/database/: connect.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py  roles.py
templates/: example_email.html
tests/: conftest.py  test_root.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
